// ==========================================
// 1. CORE: USUARIOS Y SUSCRIPCIONES
// ==========================================

Table Usuarios {
  id int [pk, increment]
  nombre varchar [not null]
  correo varchar [unique, not null]
  contrasena varchar [not null]
  
  // Datos personales
  fecha_nacimiento date [note: "Python calcula la edad dinámicamente con este dato"]
  
  // Desglose de dirección (Todos opcionales excepto CP)
  calle varchar
  numero_exterior varchar
  numero_interior varchar
  colonia varchar
  ciudad varchar
  estado varchar
  pais varchar [default: "'México'"]
  codigo_postal varchar [not null, note: "Obligatorio"]
  fecha_registro timestamp

  // 👑 BANDERA DE SUPER ADMINISTRADOR
  es_admin_sistema boolean [default: false, note: "Si es True, tiene acceso global a todo Circle"]
  
  // ROLES DE NEGOCIO (Dinámicos):
  // Todos son consumidores. Eres dueño si tu ID está en Negocios.
  // Eres empleado si tu ID está en Empleados_Sucursal.
}

Table Suscripciones {
  id int [pk, increment]
  nombre_plan varchar [note: "'Gratis', 'Premium'"]
  limite_soluciones int [note: "3 para Gratis"]
  limite_sucursales int [note: "1 para Gratis"]
  limite_empleados int [note: "15 para Gratis"]
  limite_consumidores int [note: "100 para Gratis"]
  limite_productos int [note: "50 para Gratis"]
}

// ==========================================
// 2. CORE: NEGOCIOS, SUCURSALES Y EMPLEADOS
// ==========================================

Table Negocios {
  id int [pk, increment]
  id_dueno int [ref: > Usuarios.id]
  id_suscripcion int [ref: > Suscripciones.id]
  nombre varchar [not null]
  descripcion varchar [note: "Descripción general del negocio para su perfil"]
  fecha_creacion timestamp [not null]
  
  Indexes {
    id_dueno [name: 'idx_negocios_dueno']
  }
}

// Un negocio puede tener varias sucursales (Gratis = 1)
Table Sucursales {
  id int [pk, increment]
  id_negocio int [ref: > Negocios.id]
  nombre varchar [not null]
  
  // Desglose de dirección (Obligatorios)
  calle varchar [not null]
  numero_exterior varchar [not null]
  numero_interior varchar [note: "Único campo opcional por si no aplica"]
  colonia varchar [not null]
  ciudad varchar [not null]
  estado varchar [not null]
  pais varchar [not null, default: "'México'"]
  codigo_postal varchar [not null]
  
  // Caché de rendimiento para la App Móvil
  calificacion_promedio decimal [note: "Ej: 4.8 - Actualizado por Python automáticamente"]
  total_resenas int [note: "Cuánta gente ha calificado esta sucursal"]
}

// Tabla pivote: Conecta a un Usuario (empleado) con una Sucursal
Table Empleados_Sucursal {
  id int [pk, increment]
  id_usuario int [ref: > Usuarios.id]
  id_sucursal int [ref: > Sucursales.id]
  estado_invitacion varchar [not null, note: "'pendiente' o 'aceptada'"]
  permisos varchar [not null, note: "'solo_operacion'"]
}

// ==========================================
// 3. PRODUCTOS Y SERVICIOS (Soluciones 3 y 4)
// ==========================================

Table Materiales {
  id int [pk, increment]
  nombre varchar [not null]
  descripcion varchar
  url_imagen varchar
  costo decimal [not null]
  cantidad_existencia decimal [not null]
}

Table Servicios_Productos {
  id int [pk, increment]
  nombre varchar [not null]
  descripcion varchar
  url_imagen varchar
  costo decimal [not null]
  tipo_producto varchar [not null, note:"'servicio' o 'producto'"]
}

Table Proceso_Servicio_Producto {
  id int [pk, increment]
  id_servicio_producto int [ref: > Servicios_Productos.id]
  id_material int [ref: > Materiales.id]
  cantidad decimal
  ultimo_resurtido timestamp
}

// Pivote: Un servicio puede darse en una o varias sucursales del negocio
Table Servicios_Disponibles {
  id int [pk, increment]
  id_servicio_producto int [ref: > Servicios_Productos.id]
  id_sucursal int [ref: > Sucursales.id]
  
}


// ==========================================
// 4. SOLUCIÓN 1: AGENDA INTELIGENTE
// ==========================================

// Lista Blanca para autogestión de citas
Table Agenda_Whitelist {
  id int [pk, increment]
  id_sucursales int [not null, ref: > Sucursales.id]
  id_usuario_consumidor int [ref: > Usuarios.id, note: "Null si el usuario aún no se registra en Circle"]
}

Table Citas {
  id int [pk, increment]
  id_sucursal int [not null, ref: > Sucursales.id]
  titulo varchar [not null]
  descripcion varchar
  fecha_hora_inicio timestamp [not null]
  fecha_hora_fin timestamp [not null]
  numero_bloques int [not null]
  notas_internas varchar
  estado varchar [not null, default: "'programada','completada','cancelada','reagenda'"]
}

// Pivote: Una cita puede abarcar múltiples servicios (Corte + Tinte)
Table Citas_Servicios {
  id_cita int [ref: > Citas.id]
  id_servicio_disponible int [ref: > Servicios_Disponibles.id]
  costo_actual decimal [not null, note: "Snapshot del precio al momento de agendar"]
}

// Historial de archivos multimedia por cita
Table Archivos_Citas {
  id int [pk, increment]
  id_cita int [not null, ref: > Citas.id]
  url_archivo varchar [not null]
  nombre_archivo varchar [not null]
  tipo_archivo varchar [not null]
  tamano_mb decimal [note: "Control de cuota Premium: Máximo 10 GB"]
  fecha_subida timestamp [not null]
}

Table Citas_Consumidores {
  id_cita int [ref: > Citas.id]
  id_usuario_consumidor int [ref: > Usuarios.id]
}

// ==========================================
// 5. SOLUCIÓN 1: INTELIGENCIA DE USUARIOS
// ==========================================

Table CRM_Clientes_Negocio {
  id int [pk, increment]
  id_sucursales int [ref: > Sucursales.id]
  id_usuario_consumidor int [ref: > Usuarios.id]
  segmento_calculado varchar [note: "'Leal', 'Riesgo', 'Cazador' - Llenado por Python"]
  fecha_ultima_visita timestamp
}

// ==========================================
// 6. SOLUCIÓN 5: PROGRAMA DE LEALTAD Y OFERTAS
// ==========================================

Table Resenas_Sucursales {
  id int [pk, increment]
  id_sucursal int [ref: > Sucursales.id]
  id_usuario_consumidor int [ref: > Usuarios.id]
  puntuacion int [not null, note: "Ej: 1 al 5 estrellas"]
  comentario varchar
  fecha_resena timestamp [not null]
}

// --- MOTOR DE REGLAS (OFERTAS DINÁMICAS N x N) ---

Table Ofertas {
  id int [pk, increment]
  id_Sucursales int [not null, ref: > Sucursales.id]
  titulo varchar [not null]
  descripcion varchar
  fecha_inicio timestamp
  fecha_fin timestamp
  limite_existencias int [note: "Null = Ilimitadas"]
  limite_por_usuario int [note: "Null = ilimitado, 1 = uso único por consumidor"]
  es_publica boolean [not null, default: true, note: "Si es True, ignora la Whitelist"]
  costo_en_puntos decimal [default: null, note: "Si tiene valor, la oferta funciona como una recompensa que se 'compra' descontando saldo de la cartera"]
  premio_en_puntos decimal [default: null, note: "Puntos que se otorgan al canjear la oferta via QR"]
  premio_en_sellos int [default: null, note: "Sellos que se otorgan al canjear la oferta via QR"]
  
  // Control manual de la promoción
  estado varchar [not null, default: "'activa'", note: "Ej: 'activa', 'pausada', 'finalizada'. Permite al dueño apagarla manualmente independientemente de las fechas."]
}

// Los "Bloques de Lego" para armar la oferta
Table Ofertas_Reglas {
  id int [pk, increment]
  id_oferta int [not null, ref: > Ofertas.id]
  tipo_regla varchar [not null, note: "'requisito' o 'recompensa'"]
}

// Tabla intermedia: conecta una regla con múltiples productos/servicios
Table Ofertas_Reglas_Servicios {
  id int [pk, increment]
  id_oferta_regla int [not null, ref: > Ofertas_Reglas.id]
  id_servicio_disponible int [not null, ref: > Servicios_Disponibles.id]
  cantidad int [default: 1]
  porcentaje_descuento decimal
  monto_descuento decimal
  monto_minimo decimal [note: "Solo para requisitos"]
}

// Exclusividad de la oferta
Table Ofertas_Whitelist {
  id_oferta int [ref: > Ofertas.id]
  id_usuario_consumidor int [ref: > Usuarios.id]
}

// Registro de quién escaneó el QR y cobró la promoción
Table Historial_Uso_Ofertas {
  id int [pk, increment]
  id_oferta int [not null, ref: > Ofertas.id]
  id_usuario_consumidor int [not null, ref: > Usuarios.id]
  id_transaccion int [not null, ref: > Transacciones.id]
  fecha_uso timestamp [not null]
}

// ==========================================
// 7. MÓDULO DE LEALTAD (Puntos y Sellos)
// ==========================================

// Las "Reglas del Juego" definidas por el dueño
Table Configuracion_Lealtad {
  id int [pk, increment]
  id_negocio int [not null, unique, ref: > Negocios.id, note: "Un negocio tiene 1 sola configuración global"]
  
  // Regla 1: Ticket ($ gastado)
  tasa_puntos_por_peso decimal [default: 0, note: "Ej: 1.0 = 1 punto por cada $1"]
  
  // Regla 2: Visitas (Sellos)
  puntos_por_visita int [default: 0, note: "Ej: 1 sello/punto por cada transacción completada"]
  
  // Regla de caducidad
  meses_vigencia_puntos int [default: 12]
}

// Productos estrella: tabla intermedia para soportar múltiples productos con multiplicador
Table Configuracion_Productos_Estrella {
  id int [pk, increment]
  id_configuracion_lealtad int [not null, ref: > Configuracion_Lealtad.id]
  id_servicio_producto int [not null, ref: > Servicios_Productos.id]
  multiplicador_producto decimal [not null, default: 1.0, note: "Ej: 2.0 = Puntos dobles"]
}

// La "Billetera" del consumidor en cada negocio
Table Carteras_Lealtad {
  id int [pk, increment]
  id_usuario_consumidor int [not null, ref: > Usuarios.id]
  id_negocio int [not null, ref: > Negocios.id]
  
  saldo_puntos decimal [default: 0.0]
  saldo_sellos int [default: 0]
  fecha_ultima_acumulacion timestamp
  
  Indexes {
    (id_usuario_consumidor, id_negocio) [unique, name: 'idx_cartera_unica_por_negocio']
  }
}

// Auditoría: El estado de cuenta del consumidor
Table Historial_Movimientos_Lealtad {
  id int [pk, increment]
  id_cartera int [not null, ref: > Carteras_Lealtad.id]
  id_transaccion int [ref: > Transacciones.id, note: "Puede ser Nulo si los puntos se dieron por compensación/regalo"]
  
  tipo_movimiento varchar [not null, note: "'acumulacion' o 'canje'"]
  monto_puntos decimal [default: 0.0]
  monto_sellos int [default: 0]
  descripcion varchar [note: "Ej: 'Puntos dobles por compra de Capuchino'"]
  fecha_movimiento timestamp [not null]
}

// ==========================================
// 8. ECOSISTEMA: CATÁLOGO DE SOLUCIONES (App Store interna)
// ==========================================

// El catálogo maestro de herramientas disponibles en Circle
Table Soluciones {
  id int [pk, increment]
  nombre varchar [not null, note: "Ej: 'Agenda', 'Lealtad', 'Inventario'"]
  descripcion varchar
  
  ruta_frontend varchar [note: "La ruta de navegación, ej: '/agenda'"]
  
  // Control de Acceso
  es_premium_exclusiva boolean [default: false, note: "Si es True, el plan Gratis no puede verla ni instalarla"]
  activa_en_catalogo boolean [default: true, note: "Para ocultar herramientas que están en mantenimiento o 'Próximamente'"]
}

// Las herramientas que cada dueño ha "instalado" en su menú
Table Negocios_Soluciones {
  id int [pk, increment]
  id_negocio int [not null, ref: > Negocios.id]
  id_solucion int [not null, ref: > Soluciones.id]
  
  fecha_instalacion timestamp [not null, note: "Cuándo se agregó al menú radial"]
  esta_activa boolean [default: true, note: "Permite apagar la herramienta sin borrar los datos del cliente"]
  
  Indexes {
    // Evita que un negocio instale la misma solución dos veces
    (id_negocio, id_solucion) [unique, name: 'idx_negocio_solucion_unica']
  }
}

// ==========================================
// 9. MÓDULO DE FEED / PUBLICACIONES DEL NEGOCIO
// ==========================================

Table Publicaciones {
  id int [pk, increment]
  id_negocio int [not null, ref: > Negocios.id, note: "La publicación se muestra a nivel negocio global"]
  
  // 🌟 EL ENLACE MÁGICO
  id_oferta int [ref: > Ofertas.id, note: "Opcional: Si la publicación es para anunciar un descuento, se enlaza aquí para heredar toda la lógica NxN, caducidad y whitelist"]
  
  titulo varchar [not null, note: "Ej: '¡Gran promoción de verano!'"]
  descripcion varchar [not null, note: "El texto descriptivo de la publicación"]
  url_imagen varchar [note: "Imagen promocional o flyer"]
  
  habilitar_comentarios boolean [not null, default: true, note: "El dueño decide si los clientes pueden comentar"]
  fecha_publicacion timestamp [not null]
}

Table Comentarios {
  id int [pk, increment]
  
  // 🌟 PATRÓN DE ARCO EXCLUSIVO (Exclusive Arc)
  id_publicacion int [ref: > Publicaciones.id, note: "Nulo si el comentario se hace directamente en la vista de una Oferta"]
  id_oferta int [ref: > Ofertas.id, note: "Nulo si el comentario se hace directamente en un Post del Feed"]
  
  id_usuario_consumidor int [not null, ref: > Usuarios.id]
  texto_comentario varchar [not null]
  fecha_comentario timestamp [not null]
  
  // Borrado Lógico (Soft Delete)
  esta_oculto boolean [not null, default: false, note: "Si es True, desaparece del feed, pero se mantiene en BD."]
  
  Note: "REGLA: Al crear esta tabla en SQL, se debe añadir -> CHECK ((id_publicacion IS NOT NULL AND id_oferta IS NULL) OR (id_publicacion IS NULL AND id_oferta IS NOT NULL))"
}

// ==========================================
// NUEVO DOMINIO: FINANZAS Y POS (Punto de Venta)
// ==========================================

// Puntos de cobro físicos en una sucursal
Table Cajas_Fisicas {
  id int [pk, increment]
  id_sucursal int [not null, ref: > Sucursales.id]
  nombre varchar [not null, note: "Ej: 'Caja Mostrador', 'Caja Principal'"]
  esta_activa boolean [not null, default: true]
}

// El 'Turno' o 'Corte' de un empleado en una caja específica
Table Sesiones_Caja {
  id int [pk, increment]
  id_caja_fisica int [not null, ref: > Cajas_Fisicas.id]
  id_usuario int [not null, ref: > Usuarios.id, note: "Empleado responsable del turno"]
  
  fondo_inicial decimal [not null, default: 0.0]
  fecha_apertura timestamp [not null]
  
  // Nulos mientras el turno siga abierto
  fecha_cierre timestamp 
  efectivo_contado_al_cierre decimal [note: "Dato duro (contado físicamente). El descuadre lo calcula el backend"]
}

// Registro de entradas/salidas manuales de dinero ajenas a las ventas
Table Movimientos_Efectivo {
  id int [pk, increment]
  id_sesion_caja int [not null, ref: > Sesiones_Caja.id]
  
  tipo_movimiento varchar [not null, note: "'ingreso' o 'egreso'"]
  monto decimal [not null]
  concepto varchar [not null, note: "Ej: 'Pago de proveedor de agua', 'Morralla extra'"]
  fecha timestamp [not null]
}

Table Transacciones {
  id int [pk, increment]
  id_usuario_consumidor int [ref: > Usuarios.id]
  
  // EL ENLACE MÁGICO AL CORTE DE CAJA (Opcional)
  id_sesion_caja int [ref: > Sesiones_Caja.id, note: "Si es Nulo, fue una transacción digital 24/7 sin caja abierta"]
  
  monto_total decimal [not null, note: "Suma de todos los subtotal de la venta"]
  
  // ATRIBUTOS FINANCIEROS AUDITABLES
  metodo_pago varchar [not null, note: "Ej: 'efectivo', 'tarjeta', 'transferencia', 'puntos'"]
  estado_pago varchar [not null, default: "'completado'", note: "Ej: 'completado', 'pendiente', 'reembolsado'"]
  
  fecha_transaccion timestamp [not null]
}

// Mantenemos su estructura intacta, pero ahora lógicamente pertenece al dominio de Finanzas
Table Detalle_Transaccion {
  id int [pk, increment]
  id_transaccion int [not null, ref: > Transacciones.id]
  id_servicios_productos_disponibles int [ref: > Servicios_Disponibles.id]
  cantidad int [not null]
  subtotal decimal [not null, note: "Cantidad por el costo de servicios_productos"]
}